[tool.poetry]
name = "mlb-hof-scraper"
version = "0.1.0"
description = ""
authors = ["samkasbawala <samarth.kasbawala@uconn.edu>"]
readme = "README.md"
packages = [{include = "mlb_hof_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
pandas = "^1.5.2"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
pytest = "^7.2.0"
mypy = "^0.991"
types-beautifulsoup4 = "^4.11.6.1"
types-requests = "^2.28.11.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
